1. Removed the "document" and "rpc" checks from the InterfaceImplementationTemplate.xsl 2. Fixed a minor problem with the MessageReceiverTemplate.xsl 3. Removed the comments from SkeletonInterfaceTemplate.xsl 4. Fixed the compiling issue of the WSDL2Java test and exploded the tests over 13 test classes